--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "projecteuler"
 version = "0.1.0"
-authors = ["david-sk <david.desmeurs@slagkryssaren.com>"]
+authors = ["cricri+vivi"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
